deep in the reeds with trying to fix route spacing

--- a/src/public/css/game.css
+++ b/src/public/css/game.css
@@ -71,9 +71,9 @@
     border-color: chocolate;
     overflow: scroll;
     width: 100%;
-    height: 650px;
+    /* height: 650px; */
     /* Should un-comment this TODO here! */
-    /* height: 100%; */
+    height: 100%;
     /* display: none; just while doing desk*/
 
 }
@@ -113,8 +113,6 @@
 .pointTrackerSection {
     height: 35px;
     display: flex;
-    /* TODO uncomment this here!*/
-    /* display: none; */
     align-items: center;
     justify-content: center;
 
